--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
 
         <div class="display-4 mb-2">ToDo приложение</div>
-        <div class="h4 mb-5">список задач на сегодня</div>
+        <div class="h4 mb-5">список задач</div>
 
         <!-- List of tasks -->
         <div class="card mb-4">
