--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul id="tasksList" class="list-group list-group-flush">
 
                 <!-- <li id="emptyList" class="list-group-item empty-list">
-                    <img src="./img/leaf.svg" alt="Empty" width="48" class="mt-3">
+                    <img src="./img/book.png" alt="Empty" width="48" class="mt-3">
                     <div class="empty-list__title">Список дел пуст</div>
                 </li> -->
 
@@ -59,7 +59,7 @@
 
     </div>
 
-    <script src="js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
