--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="container">
 
-        <div class="display-4 mb-2">ToDo приложение</div>
+        <div class="display-4 mb-2">ToDo App</div>
         <div class="h4 mb-5">список задач</div>
 
         <!-- List of tasks -->
